// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useClaimRewards > calls useSendTransaction with the correct parameters 2`] = `
{
  "abi": Any<Array>,
  "args": [
    "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
  ],
  "functionName": "claim",
}
`;

exports[`useClaimRewards > calls useSendTransaction with the correct parameters 3`] = `
{
  "abi": Any<Array>,
  "args": [
    "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
    "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
    0n,
  ],
  "functionName": "claim",
}
`;

exports[`useClaimRewards > calls useSendTransaction with the correct parameters 4`] = `
{
  "abi": Any<Array>,
  "args": [
    "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
    [
      "0x08e0a5575de71037ae36abfafb516595fe68e5e4",
      "0xd5c4c2e2facbeb59d0216d0595d63fcdc6f9a1a7",
      "0x74469281310195a04840daf6edf576f559a3de80",
    ],
  ],
  "functionName": "claimVenus",
}
`;

exports[`useClaimRewards > calls useSendTransaction with the correct parameters 5`] = `
{
  "abi": Any<Array>,
  "args": [
    "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
    [
      "0x37a0ac901578a7f05379fc43330b3d1e39d0c40c",
      "0x75a10f0c415dccca275e8cdd8447d291a6b86f06",
    ],
  ],
  "functionName": "claimRewardToken",
}
`;

exports[`useClaimRewards > calls useSendTransaction with the correct parameters 6`] = `
{
  "abi": Any<Array>,
  "args": [
    "0x37a0ac901578a7f05379fc43330b3d1e39d0c40c",
    "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
  ],
  "functionName": "claimInterest",
}
`;

exports[`useClaimRewards > calls useSendTransaction with the correct parameters 7`] = `
{
  "abi": Any<Array>,
  "args": [
    "0x75a10f0c415dccca275e8cdd8447d291a6b86f06",
    "0x3d759121234cd36F8124C21aFe1c6852d2bEd848",
  ],
  "functionName": "claimInterest",
}
`;
